hack fix for the chrome back face visible issue
hiding the back face with js for chrome only (not something i like - if
you have abetter suggestion PLEASE let me know)

--- a/assets/css/daily-myths.css
+++ b/assets/css/daily-myths.css
@@ -126,7 +126,9 @@ h1{
        -o-transform: rotateY( 180deg );
           transform: rotateY( 180deg );
 }
-
+#answer.hidden{
+  visibility: hidden;
+}
 #answer .yes,
 #answer .no{
   display: none;
